--- a/Panckake_Flip/Config/DefaultEngine.ini
+++ b/Panckake_Flip/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/Physics_testing.Physics_testing
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Jude/tesGM.tesGM_C
+GlobalDefaultGameMode=/Game/Jude/testGM.testGM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
