--- a/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -180,11 +180,11 @@ bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeHashSet=
+WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
 SceneComponent=
-SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
+SceneComponent=
 None=======
 Test_throw_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision
 LandscapeStreamingProxy=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision
@@ -317,7 +317,7 @@ BP_Pancake_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.
 PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
 CameraComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
 TargetPoint=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
-BP_Plates_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision
+BP_Plates_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
 K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
 TextRenderComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision
 K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
@@ -376,7 +376,7 @@ Material="\"Object\" "
 MaterialInterface="\"Object\" "
 PhysicalMaterial="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PlayerMappableKeySettings="\"Object\" "
 StaticMeshActor="\"Object\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PhysicsConstraintComponent="\"Object\" \"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" "
@@ -636,7 +636,7 @@ StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.Sockets=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.ComponentTick=True
-StaticMeshComponent.Physics=True
+StaticMeshComponent.Physics=False
 StaticMeshComponent.Collision=True
 StaticMeshComponent.HLOD=True
 StaticMeshComponent.Lighting=True
@@ -1584,15 +1584,15 @@ BP_Spawn_Weigt_C.Input=True
 BP_Spawn_Weigt_C.Actor=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1613,10 +1613,7 @@ None=======
 None=======
 None=======
 OpenAssetsAtExit=/Game/Barney/Ball_Guy_BP.Ball_Guy_BP
-OpenAssetsAtExit=/Game/Barney/Playercharacter_IA.Playercharacter_IA
-OpenAssetsAtExit=/Game/Barney/Right_IA.Right_IA
-OpenAssetsAtExit=/Game/Weight_Bp.Weight_Bp
-OpenAssetsAtExit=/Game/Jude/BP_Spawn_Ball.BP_Spawn_Ball
+OpenAssetsAtExit=/Game/Jude/BP_Spawn_Weigt.BP_Spawn_Weigt
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1631,7 +1628,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Jude
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1643,10 +1640,10 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserDrawer.JumpMRU=/All/Game/Jude
-ContentBrowserDrawer.JumpMRU=/All/Game/Pissbaby
-ContentBrowserDrawer.JumpMRU=/All/Game/Barney
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Jude
+ContentBrowserDrawer.JumpMRU=/All/Game/Barney
+ContentBrowserDrawer.JumpMRU=/All/Game/Pissbaby
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/EngineData
 ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine/BasicShapes
@@ -1704,13 +1701,13 @@ Button.Behavior=False
 K2Node_CustomEvent.Graph=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Jude/BP_Spawn_Ball
-MRUItem1=/Game/Jude/BP_Spawn_Weigt
-MRUItem2=/Game/Weight_Bp
-MRUItem3=/Game/Jude/BP_Weight
-MRUItem4=/Game/Barney/Right_IA
-MRUItem5=/Game/Barney/Playercharacter_IA
-MRUItem6=/Game/Barney/Ball_Guy_BP
+MRUItem0=/Game/Jude/BP_Spawn_Weigt
+MRUItem1=/Game/Barney/Ball_Guy_BP
+MRUItem2=/Game/Jude/BP_Spawn_Ball
+MRUItem3=/Game/Weight_Bp
+MRUItem4=/Game/Jude/BP_Weight
+MRUItem5=/Game/Barney/Right_IA
+MRUItem6=/Game/Barney/Playercharacter_IA
 MRUItem7=/Game/Jude/BP_MovingWall
 MRUItem8=/Game/Jude/BP_MovingHoleWall
 MRUItem9=/Game/Jude/BP_HoleWall
