--- a/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1037.050861,Y=2047.073202,Z=350.382236),CamRotation=(Pitch=-24.687521,Yaw=-74.530670,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=-6.106380,Yaw=31.047299,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=1797.380165,Y=1495.599928,Z=911.093812),CamRotation=(Pitch=333.907228,Yaw=145.432495,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1066.757757,Y=3593.357967,Z=156.214693),CamRotation=(Pitch=-30.000000,Yaw=89.999999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=1237.793980,Y=920.167525,Z=380.221323),CamRotation=(Pitch=0.000000,Yaw=90.000001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=330.983789,Y=3563.202289,Z=805.802797),CamRotation=(Pitch=-20.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=330.983866,Y=3563.202428,Z=546.539930),CamRotation=(Pitch=-20.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/NewWorld.NewWorld", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-1512.520081,Y=-1717.952294,Z=3021.809863),CamRotation=(Pitch=-49.800000,Yaw=65.200001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/NewWorld1.NewWorld1", (LevelViewportsInfo=((),(),(),(),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_1.Level_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-364.144372,Y=735.427023,Z=2326.116940),CamRotation=(Pitch=-51.000000,Yaw=-92.600001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_2.Level_2", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-1071.425037,Y=-1150.995762,Z=2121.607495),CamRotation=(Pitch=-46.000001,Yaw=92.800001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
-EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=2500.943578,Y=633.006953,Z=171.375241),CamRotation=(Pitch=-43.999900,Yaw=-1748.800026,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-6366.837665,Y=1483.326735,Z=6669.555917),CamRotation=(Pitch=-41.800000,Yaw=8.800000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level-1.Level-1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-3098.321814,Y=-474.549883,Z=442.672447),CamRotation=(Pitch=-32.800000,Yaw=-189.599999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Hole_1.Hole_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=592.929329,Y=1306.206815,Z=454.010528),CamRotation=(Pitch=-26.999900,Yaw=-1203.200018,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=2749.004196,Y=1742.455403,Z=96.231848),CamRotation=(Pitch=-7.200000,Yaw=-186.800003,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-6366.837665,Y=1483.326735,Z=6669.555917),CamRotation=(Pitch=-41.800000,Yaw=8.800000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level-1.Level-1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-3098.321814,Y=-474.549883,Z=442.672447),CamRotation=(Pitch=-32.800000,Yaw=-189.599999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Hole_1.Hole_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=592.929329,Y=1306.206815,Z=454.010528),CamRotation=(Pitch=-26.999900,Yaw=-1203.200018,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 None=======
 None=======
 None=======
@@ -189,6 +189,7 @@ MRUItem6=/Game/Harry/NewWorld1
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
@@ -202,9 +203,9 @@ None=======
 Test_throw_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision
 LandscapeStreamingProxy=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision
 PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
-PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,CameraComponent.TransformCommon.Transform
+PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
 CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
-CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
+CapsuleComponent=
 PhysicsConstraintComponent=PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive
 SeeSaw_BP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
 Actor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,K2Node_CustomEvent.Inputs.9D7C116D4A0697D17BB0659963DB845A
@@ -2464,8 +2465,9 @@ TriangulateSplinesToolProperties.Mesh=True
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
@@ -2492,12 +2494,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-OpenAssetsAtExit=/Game/Jude/BP_Windmill.BP_Windmill
-OpenAssetsAtExit=/Game/Jude/BP_DropFloor.BP_DropFloor
-OpenAssetsAtExit=/Game/Jude/BP_TrapDoor.BP_TrapDoor
-OpenAssetsAtExit=/Game/Jude/Cloth_Mat.Cloth_Mat
-OpenAssetsAtExit=/Game/Jude/Cannon_Mat.Cannon_Mat
 None=======
 None=======
 None=======
@@ -2516,7 +2512,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Barney
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2528,17 +2524,17 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Barney
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Harry
-ContentBrowserDrawer.JumpMRU=/All/Game/_GENERATED
 ContentBrowserDrawer.JumpMRU=/All/Game/_GENERATED/B00925235
+ContentBrowserDrawer.JumpMRU=/All/Game/_GENERATED
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude
+ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude/Widgets
 ContentBrowserDrawer.JumpMRU=/All/Game/Simple_forest
 ContentBrowserDrawer.JumpMRU=/All/Game/Simple_forest/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Simple_forest/Map
-ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude/NewFolder
@@ -2580,6 +2576,8 @@ NiagaraAssetBrowser.CurrentViewType=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/Barney/Ball_Guy_BP.Ball_Guy_BP;
+RecentlyPlaced=/Game/_GENERATED/B00925235/Combined_564F9D00.Combined_564F9D00;
+RecentlyPlaced=/Game/_GENERATED/B00925235/Combined_86EA5D79.Combined_86EA5D79;
 RecentlyPlaced=/Game/_GENERATED/B00925235/Boolean_39F9ED01.Boolean_39F9ED01;
 RecentlyPlaced=/Game/Jude/BP_TrapDoor.BP_TrapDoor;
 RecentlyPlaced=/Game/Jude/BP_Windmill.BP_Windmill;
@@ -2597,8 +2595,6 @@ RecentlyPlaced=/Game/Harry/Grass.Grass;
 RecentlyPlaced=/Game/Jude/BP_Spawn_Weigt.BP_Spawn_Weigt;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/SeeSaw_BP.SeeSaw_BP;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Jude/BP_Plates.BP_Plates;
 None=======
 
 [DetailCategoriesAdvanced]
@@ -2614,36 +2610,36 @@ Button.Behavior=False
 K2Node_CustomEvent.Graph=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Jude/Cannon_Mat
-MRUItem1=/Game/Jude/BP_Windmill
+MRUItem0=/Game/Jude/Fuse_Mat
+MRUItem1=/Game/Jude/Cannon_Mat
 MRUItem2=/Game/Jude/Cloth_Mat
 MRUItem3=/Game/Jude/BP_TrapDoor
 MRUItem4=/Game/Jude/BP_DropFloor
-MRUItem5=/Game/_GENERATED/B00925235/Combined_1B47D212
-MRUItem6=/Game/Physics_testing
-MRUItem7=/Game/Jude/Widgets/BP_Pause
-MRUItem8=/Game/Jude/Widgets/BP_Options
-MRUItem9=/Game/Jude/Widgets/BP_Accessability
-MRUItem10=/Game/Jude/Widgets/BP_Controls
-MRUItem11=/Game/Jude/click-21157
-MRUItem12=/Game/Jude/click-21156
-MRUItem13=/Game/Jude/MainMenu
-MRUItem14=/Game/Jude/Widgets/BP_MainMenu
-MRUItem15=/Game/Jude/BP_Hammer
-MRUItem16=/Game/Jude/BP_Hole
-MRUItem17=/Game/Harry/Hole_1
-MRUItem18=/Game/Jude/BP_Plates
-MRUItem19=/Game/Harry/Level-1
-MRUItem20=/Game/Jude/BP_Weight
-MRUItem21=/Game/Jude/BP_Spawn_Weigt
-MRUItem22=/Game/Weight_Bp
-MRUItem23=/Game/SeeSaw_BP
-MRUItem24=/Game/Barney/Ball_Guy_BP
-MRUItem25=/Game/Jude/BP_Spawn_Ball
-MRUItem26=/Game/Barney/Right_IA
-MRUItem27=/Game/Barney/Playercharacter_IA
-MRUItem28=/Game/Jude/BP_MovingWall
-MRUItem29=/Game/Jude/BP_MovingHoleWall
+MRUItem5=/Game/Jude/BP_Windmill
+MRUItem6=/Game/_GENERATED/B00925235/Combined_1B47D212
+MRUItem7=/Game/Physics_testing
+MRUItem8=/Game/Jude/Widgets/BP_Pause
+MRUItem9=/Game/Jude/Widgets/BP_Options
+MRUItem10=/Game/Jude/Widgets/BP_Accessability
+MRUItem11=/Game/Jude/Widgets/BP_Controls
+MRUItem12=/Game/Jude/click-21157
+MRUItem13=/Game/Jude/click-21156
+MRUItem14=/Game/Jude/MainMenu
+MRUItem15=/Game/Jude/Widgets/BP_MainMenu
+MRUItem16=/Game/Jude/BP_Hammer
+MRUItem17=/Game/Jude/BP_Hole
+MRUItem18=/Game/Harry/Hole_1
+MRUItem19=/Game/Jude/BP_Plates
+MRUItem20=/Game/Harry/Level-1
+MRUItem21=/Game/Jude/BP_Weight
+MRUItem22=/Game/Jude/BP_Spawn_Weigt
+MRUItem23=/Game/Weight_Bp
+MRUItem24=/Game/SeeSaw_BP
+MRUItem25=/Game/Barney/Ball_Guy_BP
+MRUItem26=/Game/Jude/BP_Spawn_Ball
+MRUItem27=/Game/Barney/Right_IA
+MRUItem28=/Game/Barney/Playercharacter_IA
+MRUItem29=/Game/Jude/BP_MovingWall
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2901,8 +2897,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2933,7 +2929,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=166.667 Y=0.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
