--- a/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Panckake_Flip/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,7 +164,7 @@ MaterialParamsForDroppedTextures=()
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1037.050861,Y=2047.073202,Z=350.382236),CamRotation=(Pitch=-24.687521,Yaw=-74.530670,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=-6.106380,Yaw=31.047299,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=1797.380165,Y=1495.599928,Z=911.093812),CamRotation=(Pitch=333.907228,Yaw=145.432495,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=3049.809082),(CamPosition=(X=1066.757757,Y=3593.357967,Z=156.214693),CamRotation=(Pitch=-30.000000,Yaw=89.999999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=1237.793980,Y=920.167525,Z=380.221323),CamRotation=(Pitch=0.000000,Yaw=90.000001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=330.983789,Y=3563.202289,Z=805.802797),CamRotation=(Pitch=-20.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=330.983866,Y=3563.202428,Z=546.539930),CamRotation=(Pitch=-20.000000,Yaw=0.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/NewWorld.NewWorld", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-1512.520081,Y=-1717.952294,Z=3021.809863),CamRotation=(Pitch=-49.800000,Yaw=65.200001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/NewWorld1.NewWorld1", (LevelViewportsInfo=((),(),(),(),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_1.Level_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-364.144372,Y=735.427023,Z=2326.116940),CamRotation=(Pitch=-51.000000,Yaw=-92.600001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_2.Level_2", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-1071.425037,Y=-1150.995762,Z=2121.607495),CamRotation=(Pitch=-46.000001,Yaw=92.800001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
-EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1105.314878,Y=2632.963430,Z=675.838510),CamRotation=(Pitch=-26.600101,Yaw=-75.000001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-6366.837665,Y=1483.326735,Z=6669.555917),CamRotation=(Pitch=-41.800000,Yaw=8.800000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level-1.Level-1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-3098.321814,Y=-474.549883,Z=442.672447),CamRotation=(Pitch=-32.800000,Yaw=-189.599999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Hole_1.Hole_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=592.929329,Y=1306.206815,Z=454.010528),CamRotation=(Pitch=-26.999900,Yaw=-1203.200018,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_1.Level_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-2616.794368,Y=-210.055330,Z=1888.845406),CamRotation=(Pitch=-17.400000,Yaw=-5.800000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/Physics_testing.Physics_testing", (LevelViewportsInfo=((CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1096.880414,Y=1768.462479,Z=508.400683),CamOrthoZoom=9999999562023526247432192.000000),(CamPosition=(X=1674.933757,Y=1554.309816,Z=627.732759),CamRotation=(Pitch=-22.400000,Yaw=157.400002,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Temp/Untitled_1.Untitled_1", (LevelViewportsInfo=((CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810)),(CamPosition=(X=-3269.068915,Y=1211.935579,Z=819.527630),CamRotation=(Pitch=1.293620,Yaw=-15.752702,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamPosition=(X=542.473882,Y=1.910855,Z=318.369810),CamUpdated=True)))),("/Game/Jude/MainMenu.MainMenu", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-6366.837665,Y=1483.326735,Z=6669.555917),CamRotation=(Pitch=-41.800000,Yaw=8.800000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level-1.Level-1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-3098.321814,Y=-474.549883,Z=442.672447),CamRotation=(Pitch=-32.800000,Yaw=-189.599999,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Hole_1.Hole_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=592.929329,Y=1306.206815,Z=454.010528),CamRotation=(Pitch=-26.999900,Yaw=-1203.200018,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/Harry/Level_1.Level_1", (LevelViewportsInfo=((),(),(),(CamPosition=(X=-1443.364378,Y=391.901788,Z=1909.204907),CamRotation=(Pitch=-51.600000,Yaw=-48.400001,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 None=======
 None=======
 None=======
@@ -644,9 +644,9 @@ testGM_C="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 CharacterMovementComponent="\"Object\" "
-PawnMovementComponent="\"Object\" "
-NavMovementComponent="\"Object\" "
-MovementComponent="\"Object\" "
+PawnMovementComponent="\"Object\" \"Object.Velocity.Velocity\" "
+NavMovementComponent="\"Object\" \"Object.Velocity.Velocity\" "
+MovementComponent="\"Object\" \"Object.Velocity.Velocity\" "
 SpringArmComponent="\"Object\" "
 Ball_gamemode_BP_C="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
@@ -793,6 +793,7 @@ DrawPolyPathProperties="\"Object\" "
 ProceduralTorusToolProperties="\"Object\" "
 ProceduralDiscToolProperties="\"Object\" "
 TriangulateSplinesToolProperties="\"Object\" "
+FloatingPawnMovement="\"Object\" \"Object.Velocity.Velocity\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2478,17 +2479,32 @@ BP_Spawn_Weigt_C.Tick=True
 BP_Spawn_Weigt_C.Events=True
 BP_Ball_C.TransformCommon=True
 BP_Ball_C.Networking=True
+FloatingPawnMovement.Variable=True
+FloatingPawnMovement.Sockets=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.ComponentTick=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.ComponentReplication=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Cooking=True
+FloatingPawnMovement.Events=True
+SceneComponent.Physics=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -2497,7 +2513,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2516,12 +2531,7 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Barney/BP_Ball.BP_Ball
 OpenAssetsAtExit=/Game/SeeSaw_BP.SeeSaw_BP
-OpenAssetsAtExit=/Game/Jude/BP_Spawn_Weigt.BP_Spawn_Weigt
-OpenAssetsAtExit=/Game/Barney/Ball_Guy_BP.Ball_Guy_BP
-OpenAssetsAtExit=/Game/Jude/Widgets/BP_UI.BP_UI
-OpenAssetsAtExit=/Game/Jude/BP_Weight.BP_Weight
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -2536,7 +2546,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Barney
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2548,14 +2558,14 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+ContentBrowserDrawer.JumpMRU=/All/Game/Barney
+ContentBrowserDrawer.JumpMRU=/All/Game/Harry
+ContentBrowserDrawer.JumpMRU=/All/Game/_GENERATED
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude
-ContentBrowserDrawer.JumpMRU=/All/Game/Harry
 ContentBrowserDrawer.JumpMRU=/All/Game/Jude/Widgets
-ContentBrowserDrawer.JumpMRU=/All/Game/Barney
 ContentBrowserDrawer.JumpMRU=/All/Game/Barney/Accessiblity
 ContentBrowserDrawer.JumpMRU=/All/Game/Barney/Old_Unused
-ContentBrowserDrawer.JumpMRU=/All/Game/_GENERATED
 ContentBrowserDrawer.JumpMRU=/All/Game/_GENERATED/B00925235
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/Simple_forest
@@ -2636,22 +2646,22 @@ Button.Behavior=False
 K2Node_CustomEvent.Graph=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Jude/BP_Weight
-MRUItem1=/Game/Jude/Widgets/BP_UI
-MRUItem2=/Game/Barney/Ball_Guy_BP
-MRUItem3=/Game/Jude/BP_Spawn_Weigt
-MRUItem4=/Game/Weight_Bp
-MRUItem5=/Game/SeeSaw_BP
-MRUItem6=/Game/Harry/Level_1
-MRUItem7=/Game/Barney/BP_Ball
-MRUItem8=/Game/Jude/Fuse_Mat
-MRUItem9=/Game/Jude/Cannon_Mat
-MRUItem10=/Game/Jude/Cloth_Mat
-MRUItem11=/Game/Jude/BP_TrapDoor
-MRUItem12=/Game/Jude/BP_DropFloor
-MRUItem13=/Game/Jude/BP_Windmill
-MRUItem14=/Game/_GENERATED/B00925235/Combined_1B47D212
-MRUItem15=/Game/Physics_testing
+MRUItem0=/Game/SeeSaw_BP
+MRUItem1=/Game/Barney/BP_Ball
+MRUItem2=/Game/Harry/Level_1
+MRUItem3=/Game/Physics_testing
+MRUItem4=/Game/Barney/Old_Unused/Ball_Guy_BP
+MRUItem5=/Game/Jude/BP_Weight
+MRUItem6=/Game/Jude/Widgets/BP_UI
+MRUItem7=/Game/Jude/BP_Spawn_Weigt
+MRUItem8=/Game/Weight_Bp
+MRUItem9=/Game/Jude/Fuse_Mat
+MRUItem10=/Game/Jude/Cannon_Mat
+MRUItem11=/Game/Jude/Cloth_Mat
+MRUItem12=/Game/Jude/BP_TrapDoor
+MRUItem13=/Game/Jude/BP_DropFloor
+MRUItem14=/Game/Jude/BP_Windmill
+MRUItem15=/Game/_GENERATED/B00925235/Combined_1B47D212
 MRUItem16=/Game/Jude/Widgets/BP_Pause
 MRUItem17=/Game/Jude/Widgets/BP_Options
 MRUItem18=/Game/Jude/Widgets/BP_Accessability
@@ -2737,7 +2747,7 @@ PerWorldEditorSettings=(("/Game/Physics_testing.Physics_testing", (LoadedEditorR
 /Game/Jude/BP_Windmill.BP_Windmill=0
 /Game/Jude/Cloth_Mat.Cloth_Mat=0
 /Game/Jude/Cannon_Mat.Cannon_Mat=0
-/Game/Barney/BP_Ball.BP_Ball=0
+/Game/Barney/BP_Ball.BP_Ball=1
 
 [MaterialEditor]
 PrimType=1
